--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "axios": "^1.6.2",
+    "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
@@ -30,9 +33,7 @@
     "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^9.0.1",
-    "axios": "^1.6.2",
-    "cheerio": "^1.0.0-rc.12"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
