Refactor Backlink Checker configuration and enhance functionality. Update Next.js version, modify Webpack settings to handle undici fallback, and improve README with detailed features and environment setup. Implement single backlink check endpoint in the server and adjust API routes for better request handling.

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "framework": "nextjs",
   "functions": {
-    "app/api/check-single/route.ts": {
+    "app/api/**/*.ts": {
       "maxDuration": 10
     }
   },
