--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node server-render.js",
+    "start:render": "npm run build && npm run start",
     "lint": "next lint",
     "server": "node server/index.js",
     "dev:all": "concurrently \"npm run dev\" \"npm run server\""
@@ -22,12 +23,20 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "axios": "^1.6.2",
+    "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^17.2.2",
+    "express": "^4.18.2",
     "lucide-react": "^0.294.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
